--- a/app/javascript/src/stylesheets/base/variables.scss
+++ b/app/javascript/src/stylesheets/base/variables.scss
@@ -1,3 +1,9 @@
+$fa-font-path: "~@fortawesome/fontawesome-free/webfonts";
+
+// colors
 $primary: #00447c;
+$secondary: #0068c9;
+$white: #fff;
 $red: #dc3545;
-$fa-font-path: '~@fortawesome/fontawesome-free/webfonts';
+
+$white-border: 2px solid $white;
