--- a/app/javascript/src/stylesheets/pages/case_contacts.scss
+++ b/app/javascript/src/stylesheets/pages/case_contacts.scss
@@ -1,33 +1,70 @@
-
 fieldset {
-    border: 1px double #CCC;
+  border: 1px double #ccc;
 }
 
 .slide-container {
-    padding: 0rem 1rem;
+  padding: 0rem 1rem;
 }
 
 legend {
-    font-size: small;
+  font-size: small;
 }
 
 .slider {
-    display: inline;
+  display: inline;
 }
 
 .range-value {
-    justify-content: center;
+  justify-content: center;
 }
 
 .range-value input {
-    width: 60%;
+  width: 60%;
 }
 
 .slider-row {
-    margin: 0px;
+  margin: 0px;
 }
 
 .dataTables_scrollHeadInner,
 .case-contacts-table {
   width: 100% !important;
+}
+
+#case-contacts-header {
+  background: $secondary;
+  color: $white;
+  width: 100%;
+  padding: 1rem;
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+
+  p,
+  a {
+    margin: 0 0.5rem 0 0;
+  }
+
+  .youth-icon {
+    height: 2rem;
+
+    &.caterpillar {
+      margin-left: 0.5rem;
+    }
+  }
+
+  select {
+    background: transparent;
+    color: $white;
+    border: none;
+
+    &#select-case-number {
+      font-size: large;
+      font-weight: bold;
+    }
+  }
+
+  label {
+    font-weight: normal;
+    display: block;
+  }
 }
