--- a/app/javascript/src/stylesheets/shared/utilities.scss
+++ b/app/javascript/src/stylesheets/shared/utilities.scss
@@ -10,3 +10,42 @@
   display: flex;
   align-items: center;
 }
+
+.flex-and-center {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.no-wrap {
+  display: flex;
+  flex-wrap: nowrap;
+}
+
+.button {
+  padding: 0.5rem 1.25rem;
+  font-weight: bold;
+  border-radius: 7px;
+
+  &.primary {
+    background: $primary;
+    color: $white;
+    border: $white-border;
+  }
+
+  &.secondary {
+    background: $white;
+    color: $primary;
+    border: $white-border;
+  }
+}
+
+.visually-hidden {
+  clip: rect(0 0 0 0);
+  clip-path: inset(50%);
+  height: 1px;
+  overflow: hidden;
+  position: absolute;
+  white-space: nowrap;
+  width: 1px;
+}
